@@ -105,6 +105,9 @@ writeconfig() {
 	addconfig1 "radiuslocationid $loc_id"
     }
 
+    # Application walled garden entries:
+    [ "$HS_USE_MAP" = "on" ] && addconfig1 "uamallowed www.google.com,maps.google.com,mt.google.com,kh.google.com,labs.google.com"
+
     (cat <<EOF
 # THIS FILE IS AUTOMATICALLY GENERATED
 cmdsocket       $CMDSOCK
